objects/Page_Block_Config__c.object
<CustomObject>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tab_Config__c</fullName>
        <label>Tab Config</label>
        <referenceTo>Tab_Config__c</referenceTo>
        <relationshipLabel>Page Blocks Config</relationshipLabel>
        <relationshipName>Page_Blocks_Config</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Table_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Table Config</label>
        <referenceTo>Table_Config__c</referenceTo>
        <relationshipLabel>Page Blocks Config</relationshipLabel>
        <relationshipName>Page_Blocks_Config</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Page Block Config</label>
    <nameField>
        <label>Page Block Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Blocks Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>